--- a/Gallery.html
+++ b/Gallery.html
@@ -84,6 +84,7 @@ document.write(sociableSrc);
 </script>
 </center>
 </div>
+</div>
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
