--- a/Contact.html
+++ b/Contact.html
@@ -93,6 +93,7 @@ document.write(sociableSrc);
 </script>
 </center>
 </div>
+</div>
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
