--- a/Pricing.html
+++ b/Pricing.html
@@ -107,6 +107,7 @@ document.write(sociableSrc);
 </script>
 </center>
 </div>
+</div>
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
