--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ document.write(sociableSrc);
 	Auto-entreprise<br>
 	40230 Saubion - FRANCE
 	</p>
-	<p class="rf">NAF/ : <a title="Activités de pré-presse">1813Z</a><br>
+	<p class="rf">NAF : <a title="Activités de pré-presse">1813Z</a><br>
 	SIRET : 534 547 856 00011<!--<br>
 	TVA : FR00 123 456 789
 	--></p>
